--- a/burrows-wheeler_cours.ipynb
+++ b/burrows-wheeler_cours.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,8 @@
     }
    ],
    "source": [
-    "bornes = map(\"T\", inferieurs, tally)\n",
+    "reads = \"T\"\n",
+    "bornes = map(reads, inferieurs, tally)\n",
     "print(\"[Borne inf = {} ; Borne supp = {}]\".format(bornes[0], bornes[1]))"
    ]
   },
@@ -559,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +572,8 @@
     }
    ],
    "source": [
-    "bornes = map(\"TAT\", inferieurs, tally)\n",
+    "reads = \"TAT\"\n",
+    "bornes = map(reads, inferieurs, tally)\n",
     "print(\"[Borne inf = {} ; Borne supp = {}]\".format(bornes[0], bornes[1]))"
    ]
   },
@@ -589,23 +591,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\n"
+      "[1, 3, 6]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'.TAT...'"
+       "'.T.T..T'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,14 +616,21 @@
     "start_motif = []\n",
     "for i in range(bornes[0], bornes[1]+1):\n",
     "    start_motif.append(positions[i]+1)\n",
+    "start_motif.sort()\n",
     "print(start_motif)\n",
     "\n",
     "alignements = \"\"\n",
     "i = 0\n",
+    "tmp = 0\n",
     "while i < len(ref):\n",
-    "    if i == start_motif[0]:\n",
-    "        alignements += \"TAT\"\n",
-    "        i += len(\"TAT\")\n",
+    "    try:\n",
+    "        start_motif[tmp]\n",
+    "    except:\n",
+    "        tmp -= 1\n",
+    "    if i == start_motif[tmp]:\n",
+    "        alignements += reads\n",
+    "        i += len(reads)\n",
+    "        tmp += 1\n",
     "    else:\n",
     "        alignements += \".\"\n",
     "        i += 1\n",
@@ -630,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +647,7 @@
      "output_type": "stream",
      "text": [
       "ATATCGT\n",
-      ".TAT...\n"
+      ".T.T..T\n"
      ]
     }
    ],
