--- a/burrows-wheeler_cours.ipynb
+++ b/burrows-wheeler_cours.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,12 +517,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Méthode d'affichage de l'alignement des reads sur la séquence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def afficher_alignement(ref, read, positions, bornes):\n",
+    "    \"\"\"\n",
+    "    Renvoie l'alignement d'un read donné avec la séquence de référence.\n",
+    "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    ref: str\n",
+    "        la séquence de référence\n",
+    "    read: str\n",
+    "        le read à aligner\n",
+    "    positions: list\n",
+    "        liste des positions\n",
+    "    bornes: tuple\n",
+    "        les bornes du vecteur positions\n",
+    "\n",
+    "    Return\n",
+    "    ------\n",
+    "    alignement: str\n",
+    "        l'alignement du reads avec la séquence de référence\n",
+    "    \"\"\"\n",
+    "    # Déterminer les positions de départ de chaque motifs dans la séquence\n",
+    "    start_motif = []\n",
+    "    for i in range(bornes[0], bornes[1]+1):\n",
+    "        start_motif.append(positions[i]+1)\n",
+    "    start_motif.sort()\n",
+    "\n",
+    "    alignements = \"\"\n",
+    "    index, tmp = 0, 0\n",
+    "    \n",
+    "    while index < len(ref):\n",
+    "        try:\n",
+    "            start_motif[tmp]\n",
+    "        except:\n",
+    "            tmp -= 1\n",
+    "        if index == start_motif[tmp]:\n",
+    "            alignements += read\n",
+    "            index += len(read)\n",
+    "            tmp += 1\n",
+    "        else:\n",
+    "            alignements += \".\"\n",
+    "            index += 1\n",
+    "    print(\"Sequence: {}\".format(ref))\n",
+    "    print(\"   Reads: {}\".format(alignements))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Alignement de T sur ATATCGT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -534,8 +592,8 @@
     }
    ],
    "source": [
-    "reads = \"T\"\n",
-    "bornes = map(reads, inferieurs, tally)\n",
+    "read = \"T\"\n",
+    "bornes = map(read, inferieurs, tally)\n",
     "print(\"[Borne inf = {} ; Borne supp = {}]\".format(bornes[0], bornes[1]))"
    ]
   },
@@ -548,7 +606,25 @@
     "<span style=\"color: #8b1538;\">Index</span>     0  1 2 3 4 <span style=\"color: #8b1538; font-weight: bold;\">5 6 7</span>\n",
     "</pre>\n",
     "\n",
-    "Indique quand positions 5+1, 0+1 & 2+1 de la séquence de référence il y a un T"
+    "Indique quand positions 5**+1**, 0**+1** & 2**+1** de la séquence de référence il y a un T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequence: ATATCGT\n",
+      "   Reads: .T.T..T\n"
+     ]
+    }
+   ],
+   "source": [
+    "afficher_alignement(ref, read, positions, bornes)"
    ]
   },
   {
@@ -560,19 +636,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Borne inf = 6 ; Borne supp = 6]\n"
+      "[Borne inf = 5 ; Borne supp = 7]\n"
      ]
     }
    ],
    "source": [
-    "reads = \"TAT\"\n",
+    "read = \"TAT\"\n",
     "bornes = map(reads, inferieurs, tally)\n",
     "print(\"[Borne inf = {} ; Borne supp = {}]\".format(bornes[0], bornes[1]))"
    ]
@@ -586,74 +662,25 @@
     "<span style=\"color: #8b1538;\">Index</span>     0  1 2 3 4 5 <span style=\"color: #8b1538; font-weight: bold;\">6</span> 7\n",
     "</pre>\n",
     "\n",
-    "Indique quand positions 0+1 de la séquence de référence il y a un motif **TAT** qui commence."
+    "Indique quand positions 0**+1** de la séquence de référence il y a un motif **TAT** qui commence."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 3, 6]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'.T.T..T'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "start_motif = []\n",
-    "for i in range(bornes[0], bornes[1]+1):\n",
-    "    start_motif.append(positions[i]+1)\n",
-    "start_motif.sort()\n",
-    "print(start_motif)\n",
-    "\n",
-    "alignements = \"\"\n",
-    "i = 0\n",
-    "tmp = 0\n",
-    "while i < len(ref):\n",
-    "    try:\n",
-    "        start_motif[tmp]\n",
-    "    except:\n",
-    "        tmp -= 1\n",
-    "    if i == start_motif[tmp]:\n",
-    "        alignements += reads\n",
-    "        i += len(reads)\n",
-    "        tmp += 1\n",
-    "    else:\n",
-    "        alignements += \".\"\n",
-    "        i += 1\n",
-    "alignements"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ATATCGT\n",
-      ".T.T..T\n"
+      "Sequence: ATATCGT\n",
+      "   Reads: .TAT...\n"
      ]
     }
    ],
    "source": [
-    "print(ref)\n",
-    "print(alignements)"
+    "afficher_alignement(ref, read, positions, bornes)"
    ]
   }
  ],
