--- a/burrows-wheeler_cours.ipynb
+++ b/burrows-wheeler_cours.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,11 +522,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def afficher_alignement(ref, read, positions, bornes):\n",
+    "def determiner_alignement(ref, read, positions, bornes):\n",
     "    \"\"\"\n",
     "    Renvoie l'alignement d'un read donné avec la séquence de référence.\n",
     "\n",
@@ -545,32 +545,23 @@
     "    ------\n",
     "    alignement: str\n",
     "        l'alignement du reads avec la séquence de référence\n",
-    "    nb_match: int\n",
-    "        le nombre de match\n",
+    "    matches: int\n",
+    "        le nombre de match pour le read donné\n",
     "    \"\"\"\n",
     "    # Déterminer les positions de départ de chaque motifs dans la séquence\n",
     "    start_motif = []\n",
     "    for i in range(bornes[0], bornes[1]+1):\n",
     "        start_motif.append(positions[i]+1)\n",
     "    start_motif.sort()\n",
-    "    nb_match = len(start_motif)\n",
+    "    matches = len(start_motif)\n",
+    "    print(start_motif)\n",
     "    \n",
-    "    alignements = \"\"\n",
-    "    index, tmp = 0, 0\n",
-    "    \n",
-    "    while index < len(ref):\n",
-    "        try:\n",
-    "            start_motif[tmp]\n",
-    "        except:\n",
-    "            tmp -= 1\n",
-    "        if index == start_motif[tmp]:\n",
-    "            alignements += read\n",
-    "            index += len(read)\n",
-    "            tmp += 1\n",
-    "        else:\n",
-    "            alignements += \".\"\n",
-    "            index += 1\n",
-    "    return alignements, nb_match"
+    "    # Déterminer l'alignement\n",
+    "    alignement = \".\" * len(ref)\n",
+    "    for pos in start_motif:\n",
+    "        alignement = alignement[:pos] + read + alignement[pos+len(read):]\n",
+    "        \n",
+    "    return alignement, matches"
    ]
   },
   {
@@ -582,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -613,13 +604,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 3, 6]\n",
       "Alignement - 3 matches\n",
       "Sequence: ATATCGT\n",
       "   Reads: .T.T..T\n"
@@ -627,7 +619,7 @@
     }
    ],
    "source": [
-    "alignement, matches = afficher_alignement(ref, read, positions, bornes)\n",
+    "alignement, matches = determiner_alignement(ref, read, positions, bornes)\n",
     "\n",
     "print(\"Alignement - {} matches\".format(matches))\n",
     "print(\"Sequence: {}\".format(ref))\n",
@@ -681,6 +673,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1]\n",
       "Alignement - 1 matches\n",
       "Sequence: ATATCGT\n",
       "   Reads: .TAT...\n"
@@ -688,7 +681,7 @@
     }
    ],
    "source": [
-    "alignement, matches = afficher_alignement(ref, read, positions, bornes)\n",
+    "alignement, matches = determiner_alignement(ref, read, positions, bornes)\n",
     "\n",
     "print(\"Alignement - {} matches\".format(matches))\n",
     "print(\"Sequence: {}\".format(ref))\n",
