Rename .csv colonne + analyse r

--- a/burrows-wheeler_cours.ipynb
+++ b/burrows-wheeler_cours.ipynb
@@ -517,7 +517,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Méthode d'affichage de l'alignement des reads sur la séquence"
+    "### Méthode d'affichage de l'alignement des reads sur la séquence\n",
+    "\n",
+    "Seulement pour des exemple jouets de quelques pb"
    ]
   },
   {
