--- a/cours_burrows-wheeler.ipynb
+++ b/cours_burrows-wheeler.ipynb
@@ -131,7 +131,7 @@
     "    \"\"\"\n",
     "    permutations = ['$' + seq]  # la matrice de burrows-wheeler\n",
     "    for i in range(len(seq)):\n",
-    "        last_element = permutations[i][-1]  # Réupérer le dernier nucléotide de la séquence d'indice i\n",
+    "        last_element = permutations[i][-1]  # Récupérer le dernier nucléotide de la séquence d'indice i\n",
     "        tmp = last_element + permutations[i][0:-1]  # Concaténer ce dernier élément à la séquence d'indice i (sans prendre en compte le dernier élément) pour générer la séquence d'indice i+1\n",
     "        permutations.append(tmp)\n",
     "    permutations.sort()  # trie par ordre alphabétique\n",
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -688,6 +688,82 @@
     "print(\"Alignement - {} matches\".format(matches))\n",
     "print(\"Sequence: {}\".format(ref))\n",
     "print(\"   Reads: {}\".format(alignement))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Amélioration bwt\n",
+    "\n",
+    "> Problème de l'algortihme *Burros-wheeler transform*\n",
+    "\n",
+    "Cas de l'algorithme dit naif, création d'une matrice de taille n * n avec n la taille de la séquence de référence.\n",
+    "\n",
+    "Dans le cas du génome humain (3 400 Mpb), la taille de la matrice sera de l'ordre du pebibyte (10e18). Il faut donc améliorer l'algorithme de *Burros-wheeler transform*.\n",
+    "\n",
+    "> 1ère amélioration \"naive\"\n",
+    "\n",
+    "Lors de la formation de la matrice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La séquence extraite T$TTCGAA à partir de la séquence de référence ATATCGT avec l'algorithme de burrows-wheeter\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def bwt_amelioration(seq):\n",
+    "    \"\"\"\n",
+    "    Cette méthode permet d'appliquer l'algorithme de burrows-wheeter tansform.\n",
+    "\n",
+    "    Ici, une première approche pour améliorer l'algorithme est mise en place.\n",
+    "\n",
+    "    Parameter\n",
+    "    ---------\n",
+    "    seq: str\n",
+    "        la séquence de référence\n",
+    "\n",
+    "    Return\n",
+    "    ------\n",
+    "    bwt: str\n",
+    "        la séquence extraite, i.e la transformé de burrows-wheeler\n",
+    "    \"\"\"\n",
+    "    # Générer la matrice de permutations simplifiée\n",
+    "    permutations, last_element = [\"$\"], \"\"\n",
+    "    for i in range(len(seq)):\n",
+    "        last_element += seq[-(i+1)]\n",
+    "        permutations.append(seq[-(i+1):] + \"$\")\n",
+    "    last_element += \"$\"\n",
+    "\n",
+    "    # Générer la transformée\n",
+    "    sort_permutation = np.argsort(permutations)\n",
+    "    bwt = [\"\"] * len(permutations)\n",
+    "    for i in range(len(bwt)):\n",
+    "        bwt[i] = last_element[sort_permutation[i]]\n",
+    "\n",
+    "    return \"\".join(bwt)\n",
+    "\n",
+    "ref = \"ATATCGT\"\n",
+    "bwt = bwt_amelioration(ref)\n",
+    "print(\"La séquence extraite {} à partir de la séquence de référence {} avec l'algorithme de burrows-wheeter\".format(bwt, ref))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cependant cette méthode bien qu'elle permet de diviser par deux la taille de la matrice de permutaions, on obtient pas un résultat significativement meilleur."
    ]
   }
  ],
